--- a/GoodBearMongoLogger/GoodBearMongoLogger.csproj
+++ b/GoodBearMongoLogger/GoodBearMongoLogger.csproj
@@ -64,12 +64,16 @@
     <Compile Include="DataAccess\Interfaces\IMongoConfig.cs" />
     <Compile Include="Exceptions\InvalidMongoDBConfigurationException.cs" />
     <Compile Include="Exceptions\InvalidMongoLoggerConfigurationException.cs" />
-    <Compile Include="Logging\Enum\LoggerType.cs" />
+    <Compile Include="Logging\Impl\AuditLogEntry.cs" />
+    <Compile Include="Logging\Impl\EventLogEntry.cs" />
+    <Compile Include="Logging\Interfaces\IAuditEntry.cs" />
+    <Compile Include="Logging\Interfaces\IEventEntry.cs" />
     <Compile Include="Logging\Impl\LogEntry.cs" />
+    <Compile Include="Logging\Impl\LogEntryBase.cs" />
     <Compile Include="Logging\Impl\Logger.cs" />
     <Compile Include="Config\Impl\Logger.cs" />
     <Compile Include="Config\Impl\Loggers.cs" />
-    <Compile Include="Logging\Interface\ILogger.cs" />
+    <Compile Include="Logging\Interfaces\ILogger.cs" />
     <Compile Include="Logging\Enum\LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Impl\ConfigService.cs" />
