--- a/GoodBearMongoLogger.Demo/App.config
+++ b/GoodBearMongoLogger.Demo/App.config
@@ -7,7 +7,7 @@
   
     <mongoLogger>
       <loggers>
-        <logger name="Test"/>
+        <logger databaseName ="Logs" loggerName="Test"/>
       </loggers>
     </mongoLogger>
   
