--- a/GoodBearMongoLogger/GoodBearMongoLogger.csproj
+++ b/GoodBearMongoLogger/GoodBearMongoLogger.csproj
@@ -76,8 +76,12 @@
     <Compile Include="Logging\Interfaces\ILogger.cs" />
     <Compile Include="Logging\Enum\LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Impl\BsonDocumentBuilderService.cs" />
     <Compile Include="Services\Impl\ConfigService.cs" />
+    <Compile Include="Services\Impl\DataAccessService.cs" />
+    <Compile Include="Services\Interfaces\IBsonDocumentBuilderService.cs" />
     <Compile Include="Services\Interfaces\IConfigService.cs" />
+    <Compile Include="Services\Interfaces\IDataAccessService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
