--- a/GoodBearMongoLogger.Demo/App.config
+++ b/GoodBearMongoLogger.Demo/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
     <configSections>
@@ -7,7 +7,7 @@
   
     <mongoLogger>
       <loggers>
-        <logger databaseName ="Logs" loggerName="Test"/>
+        <logger databaseName="Logs" loggerName="Test" />
       </loggers>
     </mongoLogger>
   
@@ -15,4 +15,19 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 
+  <runtime>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+
+      </dependentAssembly>
+
+    </assemblyBinding>
+
+  </runtime>
 </configuration>
