--- a/GoodBearMongoLogger.Demo/App.config
+++ b/GoodBearMongoLogger.Demo/App.config
@@ -6,6 +6,7 @@
     </configSections>
   
     <mongoLogger>
+      <mongoConnection username="mongoadmin" password="mongoadmin" authDatabase="admin" host="localhost" port="27017"/>
       <loggers>
         <logger databaseName="Logs" loggerName="Test" />
       </loggers>
