--- a/GoodBearMongoLogger.Demo/GoodBearMongoLogger.Demo.csproj
+++ b/GoodBearMongoLogger.Demo/GoodBearMongoLogger.Demo.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnotherSampleLoggerClass.cs" />
     <Compile Include="IoCBootstraper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
