--- a/GoodBearMongoLogger/GoodBearMongoLogger.csproj
+++ b/GoodBearMongoLogger/GoodBearMongoLogger.csproj
@@ -66,8 +66,12 @@
     <Compile Include="DataAccess\Impl\ConnectionManager.cs" />
     <Compile Include="DataAccess\Interfaces\IConnectionManager.cs" />
     <Compile Include="DataAccess\Interfaces\IMongoConfig.cs" />
+    <Compile Include="Exceptions\FailedToInitaliseLoggerFactoryException.cs" />
+    <Compile Include="Exceptions\FailedToLogException.cs" />
     <Compile Include="Exceptions\InvalidMongoDBConfigurationException.cs" />
     <Compile Include="Exceptions\InvalidMongoLoggerConfigurationException.cs" />
+    <Compile Include="Exceptions\LoggerFactoryNotInitalisedException.cs" />
+    <Compile Include="Exceptions\MongoPersistanceException.cs" />
     <Compile Include="Factory\LoggerFactory.cs" />
     <Compile Include="Logging\Impl\AuditLogEntry.cs" />
     <Compile Include="Logging\Impl\EventLogEntry.cs" />
