Added nuspec files

--- a/GoodBearMongoLogger.Autofac/GoodBearMongoLogger.Autofac.csproj
+++ b/GoodBearMongoLogger.Autofac/GoodBearMongoLogger.Autofac.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="GoodBearMongoLogger.Autofac.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
