--- a/GoodBearMongoLogger.Demo/App.config
+++ b/GoodBearMongoLogger.Demo/App.config
@@ -24,7 +24,15 @@
 
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
 
-        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.4.900" newVersion="2.2.4.900" />
+
+      </dependentAssembly>
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
 
       </dependentAssembly>
 
