--- a/GoodBearMongoLogger/GoodBearMongoLogger.csproj
+++ b/GoodBearMongoLogger/GoodBearMongoLogger.csproj
@@ -1,109 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9E116E98-79BD-465D-838F-E759673177F7}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GoodBearMongoLogger</RootNamespace>
-    <AssemblyName>GoodBearMongoLogger</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="MongoDB.Bson, Version=2.2.0.262, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.2.0\lib\net45\MongoDB.Bson.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.2.0.262, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.2.2.0\lib\net45\MongoDB.Driver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.2.0.262, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.Core.2.2.0\lib\net45\MongoDB.Driver.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.3.5.8\lib\35\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="MongoDB.Bson" Version="2.5.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Config\Impl\MongoLogger.cs" />
-    <Compile Include="Config\Interfaces\IMongoConnection.cs" />
-    <Compile Include="DataAccess\Impl\MongoConfig.cs" />
-    <Compile Include="Config\Impl\MongoConnection.cs" />
-    <Compile Include="DataAccess\Impl\ConnectionManager.cs" />
-    <Compile Include="DataAccess\Interfaces\IConnectionManager.cs" />
-    <Compile Include="DataAccess\Interfaces\IMongoConfig.cs" />
-    <Compile Include="Exceptions\FailedToInitaliseLoggerFactoryException.cs" />
-    <Compile Include="Exceptions\FailedToLogException.cs" />
-    <Compile Include="Exceptions\InvalidMongoDBConfigurationException.cs" />
-    <Compile Include="Exceptions\InvalidMongoLoggerConfigurationException.cs" />
-    <Compile Include="Exceptions\LoggerFactoryNotInitalisedException.cs" />
-    <Compile Include="Exceptions\MongoPersistanceException.cs" />
-    <Compile Include="Factory\LoggerFactory.cs" />
-    <Compile Include="Logging\Impl\AuditLogEntry.cs" />
-    <Compile Include="Logging\Impl\EventLogEntry.cs" />
-    <Compile Include="Logging\Interfaces\IAuditEntry.cs" />
-    <Compile Include="Logging\Interfaces\IEventEntry.cs" />
-    <Compile Include="Logging\Impl\LogEntry.cs" />
-    <Compile Include="Logging\Impl\AbstractLogEntryBase.cs" />
-    <Compile Include="Logging\Impl\Logger.cs" />
-    <Compile Include="Config\Impl\Logger.cs" />
-    <Compile Include="Config\Impl\Loggers.cs" />
-    <Compile Include="Logging\Interfaces\ILogEntryBase.cs" />
-    <Compile Include="Logging\Interfaces\ILogger.cs" />
-    <Compile Include="Logging\Enum\LogLevel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Impl\BsonDocumentBuilderService.cs" />
-    <Compile Include="Services\Impl\ConfigService.cs" />
-    <Compile Include="Services\Impl\DataAccessService.cs" />
-    <Compile Include="Services\Interfaces\IBsonDocumentBuilderService.cs" />
-    <Compile Include="Services\Interfaces\IConfigService.cs" />
-    <Compile Include="Services\Interfaces\IDataAccessService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="GoodBearMongoLogger.nuspec" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
